Modify DeviceSpecification
